--- a/src/module/Mainpage/Insprite/Insprite.module.scss
+++ b/src/module/Mainpage/Insprite/Insprite.module.scss
@@ -2,4 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 50px 180px 50px 150px;
+}
+.Insprite_text_h1{
+    font-size: 40px;
+    font-weight: 500;
+}
+.Insprite_text_p1{
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+.Insprite_image{
+    
 }
