--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,7 @@
     height: 75px;
     padding:10px 50px 10px 50px;
     background-color: rgb(4 11 53);
+    z-index: 10;
 }
 .Explore{
     color: #8491a3;
