--- a/src/module/Mainpage/Picture/Picture.module.scss
+++ b/src/module/Mainpage/Picture/Picture.module.scss
@@ -2,6 +2,7 @@
     padding-top: 30px;
     background-color: rgb(4 11 53);
     position: relative;
+    overflow: hidden;
 }
 .images{
     width: 100%;
