--- a/src/module/Explore/Explore.module.scss
+++ b/src/module/Explore/Explore.module.scss
@@ -37,3 +37,15 @@
     padding: 0px 20px 10px 20px;
     border-bottom: rgb(41 68 103) 2px solid;
 }
+.Menu{
+    margin: 10px 2px 10px 2px;
+    border: 0;
+    border-radius: 3px;
+    background-color: rgb(53, 94, 148);
+    width: 30px;
+    height: 30px;
+}
+.Menu:active{
+    background-color: white;
+    color: rgb(53, 94, 148);
+}
