--- a/src/module/Mainpage/Insprite/Insprite.module.scss
+++ b/src/module/Mainpage/Insprite/Insprite.module.scss
@@ -9,10 +9,40 @@
     font-weight: 500;
 }
 .Insprite_text_p1{
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
     margin-bottom: 10px;
 }
-.Insprite_image{
-    
+.Insprite_Text_Button{
+    display: flex;
+    margin-top: 50px;
+}
+.Insprite_Text{
+    width: 50%;
+}
+.Insprite_Image{
+    width: 50%;
+}
+@media screen and (max-width:1000px) {
+    .Insprite{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        padding: 50px 50px 50px 50px;
+    }
+    .Insprite_Text_Button{
+        display: none;
+    }
+    .Insprite_Text{
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+    .Insprite_text_h1{
+        font-size: 30px;
+        font-weight: 500;
+    }
+    .Insprite_Image{
+        width: 100%;
+    }
 }
