--- a/src/components/Register/Register.module.scss
+++ b/src/components/Register/Register.module.scss
@@ -8,6 +8,11 @@
     width: 100%;
     height: 100%;
 }
+.Register_BoxH1{
+    background-image: linear-gradient(to right,#6c79f1,#f30b92);
+    background-clip: text;
+    color: transparent;
+}
 .Register_Box{
     position: fixed;
     background-color: #00000099;
@@ -19,16 +24,25 @@
     align-items: center;
     justify-content: center;
 }
+.Register_Button{
+    width: 90%;
+    height: 50px;
+    margin-top: 30px;
+    border-radius: 10px;
+    border: 0;
+    background-image: linear-gradient(to right bottom , #6c79f1,#f30b92);
+    font-weight: 700;
+}
 .Register_BoxInside{
     background-color:white ;
     border-radius: 20px;
-    width: 400px;
+    width: 350px;
     height: 400px;
     text-align: center;
     
 }
 .Register_input{
-    width: 80%;
+    width: 90%;
     border-radius: 10px;
     height: 40px;
 }
